compiler/src/snapshots/compiler__parser__tests__function_definition_snapshots@pub_modifier.snap
---
source: compiler/src/parser.rs
expression: "parse(\"pub fn main() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Public(
                Public,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [],
            },
        },
    ),
]
