compiler/src/snapshots/compiler__parser__tests__function_definition_snapshots@statements.snap
---
source: compiler/src/parser.rs
expression: "parse(\"fn main() -> void { let a = 0 let b = 1 }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "a",
                            },
                            variable_type: None,
                            value: Literal(
                                Int(
                                    IntLiteral {
                                        value: 0,
                                    },
                                ),
                            ),
                            is_const: false,
                        },
                    ),
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "b",
                            },
                            variable_type: None,
                            value: Literal(
                                Int(
                                    IntLiteral {
                                        value: 1,
                                    },
                                ),
                            ),
                            is_const: false,
                        },
                    ),
                ],
            },
        },
    ),
]
